my profile page

--- a/index.html
+++ b/index.html
@@ -14,11 +14,7 @@
               <img src="images/profile_pic.jpg" id="profile" alt="Profile Picture">
               <h1>Ashish Raj Shrestha</h1>
               <h2>Web Applictaion Developer</h2>
-              <ul class="list-inline">
-                <li><a href="#" target="_blank" class="icon"><i class="fab fa-github"></i></a></li>
-                <li><a href="#" target="_blank" class="icon"><i class="fab fa-linkedin"></i></a></li>
-                <li><a href="#" target="_blank" class="icon"><i class="fab fa-instagram"></i></a></li>
-              </ul>
+              
             </div>
           </div>
 
@@ -27,9 +23,26 @@
               I am into coding from past few months and got intrested in it.
                 I joined Le Wagon to learn from the basic and improve my coding skill. Lets learn and grow together.</p>
             <div class="center">
-                <a href="https://www.lewagon.com/" target="_blank"><button>Keep Calm And Code On</button></a>
+                <a href="https://www.lewagon.com/" target="_blank"><button>ALL YOU NEED IS CODE</button></a>
             </div>
           </div>
+
+          <div class="card">
+            <div class="center">
+              <button>CONTACT ME</button>
+            </div>
+
+            <div class="center">
+              <ul class="list-inline">
+                <li><a href="http://ashishrajshrestha.github.io/profile" target="_blank" class="icon"><i class="fab fa-github"></i></a></li>
+                <li><a href="https://www.linkedin.com/in/ashish-raj-shrestha-344109109/" target="_blank" class="icon"><i class="fab fa-linkedin"></i></a></li>
+                <li><a href="#" target="_blank" class="icon"><i class="fab fa-instagram"></i></a></li>
+              </ul>
+            </div>
+        </div>
+        <div class="container-footer">
+          <p>Copyright ©2022 by Ashish</p>
+        </div>
       
             </div>
           </div>
